--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/application.css">
   <script src="js/jquery.js"></script>
   <script src="js/mousetrap.js"></script>
@@ -12,6 +11,7 @@
   <title>2048</title>
 </head>
 <body>
+<div id="container">  
   <div id="header">
     <h1>2048 Clone!</h1>
   </div>
@@ -35,6 +35,7 @@
     <div class="cell row4 col2 c4-2", id="13"></div>
     <div class="cell row4 col3 c4-3", id="14"></div>
     <div class="cell row4 col4 c4-4", id="15"></div>
+  </div>
 </div>
 </body>
 </html>
