--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <div id="container">  
   <div id="header">
     <h1>2048 Clone!</h1>
+    <div class="instructions">
+      <strong>Instructions:</strong><br>Use the arrow keys to move tiles. When you move tiles with the same value into one another, they'll merge and the value will double... Get to <strong>2048</strong>!
+    </div>
   </div>
   <div class="button">
     <button id="new-game-button">New Game</button>
